[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/audio/slime_step_1.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/Slime.gd" type="Script" id=2]
[ext_resource path="res://assets/images/slime/Slime - 1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/slime/Slime - 2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/slime/death/002.png" type="Texture" id=5]
[ext_resource path="res://assets/images/slime/death/004.png" type="Texture" id=6]
[ext_resource path="res://assets/images/slime/death/003.png" type="Texture" id=7]
[ext_resource path="res://assets/images/slime/death/001.png" type="Texture" id=8]
[ext_resource path="res://assets/images/slime/death/000.png" type="Texture" id=9]
[ext_resource path="res://assets/images/slime/death/005.png" type="Texture" id=10]
[ext_resource path="res://assets/images/slime/death/006.png" type="Texture" id=11]
[ext_resource path="res://assets/images/slime/slime_puddle.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 4.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.217
height = 20.3929

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.974
height = 14.6313

[node name="Slime" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 24
script = ExtResource( 2 )

[node name="Puddle" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 11 )
scale = Vector2( 0.187, 0.187 )
z_index = -1
texture = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=[
"slime",
]]
position = Vector2( -2.55422, -0.851424 )
scale = Vector2( 0.18651, 0.18651 )
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.13675 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="KillBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2( -0.203918, 7.34065 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="KillBox" to="." method="_on_KillBox_body_entered"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
